[gd_scene load_steps=7 format=1]

[ext_resource path="res://game_area_controller.gd" type="Script" id=1]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=2]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=3]
[ext_resource path="res://examples/swipe-direction/debug-background.png" type="Texture" id=4]
[ext_resource path="res://scenes/touch/Sectors.tscn" type="PackedScene" id=5]
[ext_resource path="res://examples/gesture-detection/trail-particle.png" type="Texture" id=6]

[node name="game_area" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Node2D" type="Node2D" parent="."]

script/script = ExtResource( 1 )

[node name="SwipeDetector" type="Node" parent="Node2D"]

script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
detect_gesture = true
process_method = null
distance_threshold = 0.01
duration_threshold = 0.05
limit_duration = false
maximum_duration = -1.0
minimum_points = 2
limit_points = false
maximum_points = -1
pattern_detection_score_threshold = 80
debug_mode = false

[node name="Sprite" type="Sprite" parent="Node2D"]

visibility/visible = false
transform/pos = Vector2( 495, 277 )
texture = ExtResource( 4 )

[node name="Sectors" parent="Node2D" instance=ExtResource( 5 )]

visibility/visible = false

[node name="DirectionLabel" type="Label" parent="Node2D"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 1.0
margin/right = 55.0
margin/bottom = 15.0
text = "<Swipe>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Particles2D" type="Particles2D" parent="Node2D"]

transform/pos = Vector2( -118.912, 157.892 )
config/amount = 32
config/lifetime = 0.2
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 6 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 1, 0.609375, 0, 1 )

[connection signal="swipe_ended" from="Node2D/SwipeDetector" to="Node2D" method="_on_SwipeDetector_swipe_ended"]

[connection signal="swipe_started" from="Node2D/SwipeDetector" to="Node2D" method="_on_SwipeDetector_swipe_started"]

[connection signal="swipe_updated" from="Node2D/SwipeDetector" to="Node2D" method="_on_SwipeDetector_swipe_updated"]

[connection signal="swipe_updated_with_delta" from="Node2D/SwipeDetector" to="Node2D" method="_on_SwipeDetector_swipe_updated_with_delta"]

[connection signal="swiped" from="Node2D/SwipeDetector" to="Node2D" method="_on_SwipeDetector_swiped"]


